Refactor authentication and registration logic

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,12 +2,23 @@ jwt:
   secret: 984hg493grt67m6thr0429uruj2309yh9gjhc763fe87t3f89723gf
   lifetime: 300m
 spring:
+  mail:
+    host: smtp.yandex.ru
+    username: planningservice@yandex.ru
+    password: wcrirvtuufdiqovr
+    port: 465
+    properties:
+      mail:
+        smtp:
+          auth: true
+        starttls:
+          enable: true
   datasource:
     url: jdbc:postgresql://localhost:5432/MeetingPlanningService
     username: postgres
-    password: qwertyuiop
+    password: postgres
     driver-class-name: org.postgresql.Driver
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
