--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,13 @@
-FROM openjdk:17-jdk-alpine
-
+FROM maven:3.9.8-amazoncorretto-17 AS build
 WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-COPY target/backend-0.0.1-SNAPSHOT.jar /app/app.jar
 
+FROM openjdk:17-jdk-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar /app/app.jar
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
