--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,9 @@
-jwt:
-  secret: 984hg493grt67m6thr0429uruj2309yh9gjhc763fe87t3f89723gf
-  lifetime: 300m
+token:
+  jwt:
+    secret: 984hg493grt67m6thr0429uruj2309yh9gjhc763fe87t3f89723gf
+    lifetime: 15m
+  refresh:
+    lifetime: 43200m
 spring:
   mail:
     host: smtp.yandex.ru
