Add OAuth2 with Google Calendar

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 token:
   jwt:
     secret: 984hg493grt67m6thr0429uruj2309yh9gjhc763fe87t3f89723gf
-    lifetime: 15m
+    lifetime: 120m
   refresh:
     lifetime: 43200m
+google:
+  client-id: 1090063756103-8dj5r62km0qkt0visrqrvp4pf6ks9d9f.apps.googleusercontent.com
+  client-secret: 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
+  redirect-uri: http://localhost:8080/oauth2/callback
 spring:
   mail:
     host: smtp.yandex.ru
