--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.3.1</version>
+		</dependency>
+
 
 		<!--		<dependency>-->
 <!--			<groupId>org.springframework.security.oauth</groupId>-->
